--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <style>
   .subscribe-button {
-    background-color: rgb(235, 0, 0);
+    background-color: green;
     color: white;
     border: none;
     height: 36px;
