--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <style>
   .subscribe-button {
-    background-color: green;
+    background-color: rgb(23, 200, 0);
     color: white;
     border: none;
     height: 36px;
